--- a/doc/tutorial/remote_debugging/makefile
+++ b/doc/tutorial/remote_debugging/makefile
@@ -1,3 +1,14 @@
+OUTPUT=remote_debugging.html
 
+all: $(OUTPUT)
+
+%.html: %.rst
+	rst2html $^ $@
+
+%.odt: %.rst
+	rst2odt -g --add-syntax-highlight  $^ $@
+
+clean:
+	rm -f $(OUTPUT)
 
 
