--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,10 @@
 Source: gede
 Section: devel
 Priority: optional
-Maintainer: Johan H <johan@acidron.com>
+Maintainer: Johan H <johan@dexar.se>
 Build-Depends: debhelper (>= 11)
 Standards-Version: 4.1.3
-Homepage: http://gede.acidron.com 
+Homepage: http://gede.dexar.se 
 
 Package: gede
 Architecture: any
