--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Qt
       run: |
         sudo apt-get update
-        sudo apt-get install -y qt5-default qttools5-dev-tools
+        sudo apt-get install -y qt5-qmake qtbase5-dev libqt5serialport5-dev
 
     # Install ctags
     - name: Install ctags
