--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
     # Install ctags
     - name: Install ctags
       run: |
-        sudo apt-get install -y ctags
+        sudo apt-get install -y exuberant-ctags
 
     # Build
     - name: Build
