--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -13,34 +13,46 @@ jobs:
 
     steps:
 
-    # Step 1: Checkout the repository
+    # Checkout the repository
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # Step 2: Install dependencies
+    #  Install dependencies
     - name: Install build tools
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential qt5-default qttools5-dev-tools wget ctags
+        sudo apt-get install -y build-essential wget
 
-    # Step 3: Download appimagetool
+    # Set up Qt
+    - name: Install Qt
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y qt5-qmake qtbase5-dev libqt5serialport5-dev
+
+    # Install ctags
+    - name: Install ctags
+      run: |
+        sudo apt-get install -y exuberant-ctags
+
+
+    # Download appimagetool
     - name: Download appimagetool
       run: |
         wget https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
         chmod +x appimagetool-x86_64.AppImage
 
-    # Step 4: Build the project
+    # Build the project
     - name: Build project
       run: |
         ./build.py --prefix=$(pwd)/AppDir
 
-    # Step 5: Prepare AppDir
+    # Prepare AppDir
     - name: Prepare AppDir
       run: |
         cp gede.desktop   AppDir/
         chmod +x AppDir/bin/gede
         
-    # Step 6: Build AppImage
+    # Build AppImage
     - name: Build AppImage
       run: |
         ./appimagetool-x86_64.AppImage AppDir
