--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -49,6 +49,8 @@ jobs:
     # Prepare AppDir
     - name: Prepare AppDir
       run: |
+        mkdir -p AppDir/
+        cp gede_icon.png AppDir/
         cp gede.desktop   AppDir/
         chmod +x AppDir/bin/gede
         
