--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -74,13 +74,13 @@ jobs:
         #   error: Fail the action with an error message
         #   ignore: Do not output any warnings or errors, the action does not fail
         # Optional. Default is 'warn'
-        if-no-files-found:
+        #if-no-files-found:
 
         # Duration after which artifact will expire in days. 0 means using default retention.
         # Minimum 1 day.
         # Maximum 90 days unless changed from the repository settings page.
         # Optional. Defaults to repository settings.
-        retention-days:
+        #retention-days:
 
         # The level of compression for Zlib to be applied to the artifact archive.
         # The value can range from 0 to 9.
