--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -66,7 +66,7 @@ jobs:
         # Optional. Default is 'artifact'
         name: Gede-${{ github.ref_name }}.AppImage
         # A file, directory or wildcard pattern that describes what to upload
-        path: Gede-*.AppImage
+        path: Gede-x86_64.AppImage
         
         # The desired behavior if no files are found using the provided path.
         # Available Options:
