--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: Build
 
 on:
   push:
@@ -30,5 +30,5 @@ jobs:
     # Build
     - name: Build
       run: |
-        make
+        ./build.py --build-all
 
