--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -65,6 +65,7 @@ jobs:
       with:
         # Optional. Default is 'artifact'
         #name: Gede-${{ github.ref_name }}.AppImage
+        name: Gede-x86_64.AppImage
         # A file, directory or wildcard pattern that describes what to upload
         path: Gede-x86_64.AppImage
         
