--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -44,7 +44,8 @@ jobs:
     # Build the project
     - name: Build project
       run: |
-        python3 ./build.py --prefix=$(pwd)/AppDir install
+        chmod a+x ./build.py
+        ./build.py --prefix=$(pwd)/AppDir install
 
     # Prepare AppDir
     - name: Prepare AppDir
