--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,9 +27,10 @@ jobs:
       run: |
         sudo apt-get install -y exuberant-ctags
 
-    # Build
-    - name: Build
+    # Build the project
+    - name: Build project
       run: |
-        chmod a+x  ./build.py
-        ./build.py --build-all
+        chmod a+x ./build.py
+        ./build.py --prefix=$(pwd)/AppDir install
+
 
