--- a/AppDir/gede.desktop
+++ b/AppDir/gede.desktop
@@ -1,6 +1,9 @@
 [Desktop Entry]
+Version=1.0
 Name=Gede
+Comment=GUI for the GNU/GDB debugger
+Exec=gede
+Icon=gede_icon.png
 Icon=gede_icon
 Type=Application
-Categories=Utility;Development;
-
+Categories=Programming;C/C++;Utility;Development;
